fixing add donation input spacing

--- a/Admin-Portal/src/components/donations/styles/AddDonation.css
+++ b/Admin-Portal/src/components/donations/styles/AddDonation.css
@@ -128,3 +128,7 @@
   cursor: pointer;
   margin-top: 15px;
 }
+
+.add-modal .css-1ae42j0 {
+  min-width: 0;
+}
